# qa

./: 2025-09-25-cli-commands.md  2025-09-25-integration-analysis.md  2025-09-25-references-analysis.md  LICENSE  README.md  cli-commands.md  config-schema.md  pyproject.toml
.github/workflows/: ci.yml
src/qa/: __init__.py
tests/: test_qa.py
